source/ocvWrp_nativeClasses_signatures.h


Ptr_GeneralizedHoughBallard*    pCvPtr_GeneralizedHoughBallardCreate( GeneralizedHoughBallard_t* wrapper);

void             pCvPtr_GeneralizedHoughBallardDelete( Ptr_GeneralizedHoughBallard* ptr, GeneralizedHoughBallard_t* wrapper = 0);

GeneralizedHoughGuil_t*   pCvPtr_GeneralizedHoughGuilConvert(Ptr_GeneralizedHoughGuil* wrapper);

Ptr_GeneralizedHoughGuil*    pCvPtr_GeneralizedHoughGuilCreate( GeneralizedHoughGuil_t* wrapper);

void             pCvPtr_GeneralizedHoughGuilDelete( Ptr_GeneralizedHoughGuil* ptr, GeneralizedHoughGuil_t* wrapper = 0);

KAZE_t*   pCvPtr_KAZEConvert(Ptr_KAZE* wrapper);

Ptr_KAZE*    pCvPtr_KAZECreate( KAZE_t* wrapper);

void             pCvPtr_KAZEDelete( Ptr_KAZE* ptr, KAZE_t* wrapper = 0);

ml_KNearest_t*   pCvPtr_KNearestConvert(Ptr_KNearest* wrapper);

Ptr_KNearest*    pCvPtr_KNearestCreate( ml_KNearest_t* wrapper);

void             pCvPtr_KNearestDelete( Ptr_KNearest* ptr, ml_KNearest_t* wrapper = 0);

dnn_Layer_t*   pCvPtr_LayerConvert(Ptr_Layer* wrapper);

Ptr_Layer*    pCvPtr_LayerCreate( dnn_Layer_t* wrapper);

void             pCvPtr_LayerDelete( Ptr_Layer* ptr, dnn_Layer_t* wrapper = 0);

LineSegmentDetector_t*   pCvPtr_LineSegmentDetectorConvert(Ptr_LineSegmentDetector* wrapper);

Ptr_LineSegmentDetector*    pCvPtr_LineSegmentDetectorCreate( LineSegmentDetector_t* wrapper);

void             pCvPtr_LineSegmentDetectorDelete( Ptr_LineSegmentDetector* ptr, LineSegmentDetector_t* wrapper = 0);

ml_LogisticRegression_t*   pCvPtr_LogisticRegressionConvert(Ptr_LogisticRegression* wrapper);

Ptr_LogisticRegression*    pCvPtr_LogisticRegressionCreate( ml_LogisticRegression_t* wrapper);

void             pCvPtr_LogisticRegressionDelete( Ptr_LogisticRegression* ptr, ml_LogisticRegression_t* wrapper = 0);

MSER_t*   pCvPtr_MSERConvert(Ptr_MSER* wrapper);

Ptr_MSER*    pCvPtr_MSERCreate( MSER_t* wrapper);

void             pCvPtr_MSERDelete( Ptr_MSER* ptr, MSER_t* wrapper = 0);

MergeDebevec_t*   pCvPtr_MergeDebevecConvert(Ptr_MergeDebevec* wrapper);

Ptr_MergeDebevec*    pCvPtr_MergeDebevecCreate( MergeDebevec_t* wrapper);

void             pCvPtr_MergeDebevecDelete( Ptr_MergeDebevec* ptr, MergeDebevec_t* wrapper = 0);

MergeMertens_t*   pCvPtr_MergeMertensConvert(Ptr_MergeMertens* wrapper);

Ptr_MergeMertens*    pCvPtr_MergeMertensCreate( MergeMertens_t* wrapper);

void             pCvPtr_MergeMertensDelete( Ptr_MergeMertens* ptr, MergeMertens_t* wrapper = 0);

MergeRobertson_t*   pCvPtr_MergeRobertsonConvert(Ptr_MergeRobertson* wrapper);

Ptr_MergeRobertson*    pCvPtr_MergeRobertsonCreate( MergeRobertson_t* wrapper);

void             pCvPtr_MergeRobertsonDelete( Ptr_MergeRobertson* ptr, MergeRobertson_t* wrapper = 0);

ml_NormalBayesClassifier_t*   pCvPtr_NormalBayesClassifierConvert(Ptr_NormalBayesClassifier* wrapper);

Ptr_NormalBayesClassifier*    pCvPtr_NormalBayesClassifierCreate( ml_NormalBayesClassifier_t* wrapper);

void             pCvPtr_NormalBayesClassifierDelete( Ptr_NormalBayesClassifier* ptr, ml_NormalBayesClassifier_t* wrapper = 0);

ORB_t*   pCvPtr_ORBConvert(Ptr_ORB* wrapper);

Ptr_ORB*    pCvPtr_ORBCreate( ORB_t* wrapper);

void             pCvPtr_ORBDelete( Ptr_ORB* ptr, ORB_t* wrapper = 0);

utils_nested_OriginalClassName_t*   pCvPtr_OriginalClassNameConvert(Ptr_OriginalClassName* wrapper);

Ptr_OriginalClassName*    pCvPtr_OriginalClassNameCreate( utils_nested_OriginalClassName_t* wrapper);

void             pCvPtr_OriginalClassNameDelete( Ptr_OriginalClassName* ptr, utils_nested_OriginalClassName_t* wrapper = 0);

ml_ParamGrid_t*   pCvPtr_ParamGridConvert(Ptr_ParamGrid* wrapper);

Ptr_ParamGrid*    pCvPtr_ParamGridCreate( ml_ParamGrid_t* wrapper);

void             pCvPtr_ParamGridDelete( Ptr_ParamGrid* ptr, ml_ParamGrid_t* wrapper = 0);

QRCodeEncoder_t*   pCvPtr_QRCodeEncoderConvert(Ptr_QRCodeEncoder* wrapper);

Ptr_QRCodeEncoder*    pCvPtr_QRCodeEncoderCreate( QRCodeEncoder_t* wrapper);

void             pCvPtr_QRCodeEncoderDelete( Ptr_QRCodeEncoder* ptr, QRCodeEncoder_t* wrapper = 0);

SIFT_t*   pCvPtr_SIFTConvert(Ptr_SIFT* wrapper);

Ptr_SIFT*    pCvPtr_SIFTCreate( SIFT_t* wrapper);

void             pCvPtr_SIFTDelete( Ptr_SIFT* ptr, SIFT_t* wrapper = 0);

ml_SVM_t*   pCvPtr_SVMConvert(Ptr_SVM* wrapper);

Ptr_SVM*    pCvPtr_SVMCreate( ml_SVM_t* wrapper);

void             pCvPtr_SVMDelete( Ptr_SVM* ptr, ml_SVM_t* wrapper = 0);

ml_SVMSGD_t*   pCvPtr_SVMSGDConvert(Ptr_SVMSGD* wrapper);

Ptr_SVMSGD*    pCvPtr_SVMSGDCreate( ml_SVMSGD_t* wrapper);

void             pCvPtr_SVMSGDDelete( Ptr_SVMSGD* ptr, ml_SVMSGD_t* wrapper = 0);

detail_SeamFinder_t*   pCvPtr_SeamFinderConvert(Ptr_SeamFinder* wrapper);

Ptr_SeamFinder*    pCvPtr_SeamFinderCreate( detail_SeamFinder_t* wrapper);

void             pCvPtr_SeamFinderDelete( Ptr_SeamFinder* ptr, detail_SeamFinder_t* wrapper = 0);

SimpleBlobDetector_t*   pCvPtr_SimpleBlobDetectorConvert(Ptr_SimpleBlobDetector* wrapper);

Ptr_SimpleBlobDetector*    pCvPtr_SimpleBlobDetectorCreate( SimpleBlobDetector_t* wrapper);

void             pCvPtr_SimpleBlobDetectorDelete( Ptr_SimpleBlobDetector* ptr, SimpleBlobDetector_t* wrapper = 0);

SparsePyrLKOpticalFlow_t*   pCvPtr_SparsePyrLKOpticalFlowConvert(Ptr_SparsePyrLKOpticalFlow* wrapper);

Ptr_SparsePyrLKOpticalFlow*    pCvPtr_SparsePyrLKOpticalFlowCreate( SparsePyrLKOpticalFlow_t* wrapper);

void             pCvPtr_SparsePyrLKOpticalFlowDelete( Ptr_SparsePyrLKOpticalFlow* ptr, SparsePyrLKOpticalFlow_t* wrapper = 0);

StereoBM_t*   pCvPtr_StereoBMConvert(Ptr_StereoBM* wrapper);

Ptr_StereoBM*    pCvPtr_StereoBMCreate( StereoBM_t* wrapper);

void             pCvPtr_StereoBMDelete( Ptr_StereoBM* ptr, StereoBM_t* wrapper = 0);

StereoSGBM_t*   pCvPtr_StereoSGBMConvert(Ptr_StereoSGBM* wrapper);

Ptr_StereoSGBM*    pCvPtr_StereoSGBMCreate( StereoSGBM_t* wrapper);

void             pCvPtr_StereoSGBMDelete( Ptr_StereoSGBM* ptr, StereoSGBM_t* wrapper = 0);

Stitcher_t*   pCvPtr_StitcherConvert(Ptr_Stitcher* wrapper);

Ptr_Stitcher*    pCvPtr_StitcherCreate( Stitcher_t* wrapper);

void             pCvPtr_StitcherDelete( Ptr_Stitcher* ptr, Stitcher_t* wrapper = 0);

detail_Timelapser_t*   pCvPtr_TimelapserConvert(Ptr_Timelapser* wrapper);

Ptr_Timelapser*    pCvPtr_TimelapserCreate( detail_Timelapser_t* wrapper);

void             pCvPtr_TimelapserDelete( Ptr_Timelapser* ptr, detail_Timelapser_t* wrapper = 0);

Tonemap_t*   pCvPtr_TonemapConvert(Ptr_Tonemap* wrapper);

Ptr_Tonemap*    pCvPtr_TonemapCreate( Tonemap_t* wrapper);

void             pCvPtr_TonemapDelete( Ptr_Tonemap* ptr, Tonemap_t* wrapper = 0);

TonemapDrago_t*   pCvPtr_TonemapDragoConvert(Ptr_TonemapDrago* wrapper);

Ptr_TonemapDrago*    pCvPtr_TonemapDragoCreate( TonemapDrago_t* wrapper);

void             pCvPtr_TonemapDragoDelete( Ptr_TonemapDrago* ptr, TonemapDrago_t* wrapper = 0);

TonemapMantiuk_t*   pCvPtr_TonemapMantiukConvert(Ptr_TonemapMantiuk* wrapper);

Ptr_TonemapMantiuk*    pCvPtr_TonemapMantiukCreate( TonemapMantiuk_t* wrapper);

void             pCvPtr_TonemapMantiukDelete( Ptr_TonemapMantiuk* ptr, TonemapMantiuk_t* wrapper = 0);

TonemapReinhard_t*   pCvPtr_TonemapReinhardConvert(Ptr_TonemapReinhard* wrapper);

Ptr_TonemapReinhard*    pCvPtr_TonemapReinhardCreate( TonemapReinhard_t* wrapper);

void             pCvPtr_TonemapReinhardDelete( Ptr_TonemapReinhard* ptr, TonemapReinhard_t* wrapper = 0);

TrackerDaSiamRPN_t*   pCvPtr_TrackerDaSiamRPNConvert(Ptr_TrackerDaSiamRPN* wrapper);

Ptr_TrackerDaSiamRPN*    pCvPtr_TrackerDaSiamRPNCreate( TrackerDaSiamRPN_t* wrapper);

void             pCvPtr_TrackerDaSiamRPNDelete( Ptr_TrackerDaSiamRPN* ptr, TrackerDaSiamRPN_t* wrapper = 0);

TrackerGOTURN_t*   pCvPtr_TrackerGOTURNConvert(Ptr_TrackerGOTURN* wrapper);

Ptr_TrackerGOTURN*    pCvPtr_TrackerGOTURNCreate( TrackerGOTURN_t* wrapper);

void             pCvPtr_TrackerGOTURNDelete( Ptr_TrackerGOTURN* ptr, TrackerGOTURN_t* wrapper = 0);

TrackerMIL_t*   pCvPtr_TrackerMILConvert(Ptr_TrackerMIL* wrapper);

Ptr_TrackerMIL*    pCvPtr_TrackerMILCreate( TrackerMIL_t* wrapper);

void             pCvPtr_TrackerMILDelete( Ptr_TrackerMIL* ptr, TrackerMIL_t* wrapper = 0);

ml_TrainData_t*   pCvPtr_TrainDataConvert(Ptr_TrainData* wrapper);

Ptr_TrainData*    pCvPtr_TrainDataCreate( ml_TrainData_t* wrapper);

void             pCvPtr_TrainDataDelete( Ptr_TrainData* ptr, ml_TrainData_t* wrapper = 0);

VariationalRefinement_t*   pCvPtr_VariationalRefinementConvert(Ptr_VariationalRefinement* wrapper);

Ptr_VariationalRefinement*    pCvPtr_VariationalRefinementCreate( VariationalRefinement_t* wrapper);

void             pCvPtr_VariationalRefinementDelete( Ptr_VariationalRefinement* ptr, VariationalRefinement_t* wrapper = 0);

IndexParams_t*   pCvPtr_flann_IndexParamsConvert(Ptr_flann_IndexParams* wrapper);

Ptr_flann_IndexParams*    pCvPtr_flann_IndexParamsCreate( IndexParams_t* wrapper);

void             pCvPtr_flann_IndexParamsDelete( Ptr_flann_IndexParams* ptr, IndexParams_t* wrapper = 0);

SearchParams_t*   pCvPtr_flann_SearchParamsConvert(Ptr_flann_SearchParams* wrapper);

Ptr_flann_SearchParams*    pCvPtr_flann_SearchParamsCreate( SearchParams_t* wrapper);

void             pCvPtr_flann_SearchParamsDelete( Ptr_flann_SearchParams* ptr, SearchParams_t* wrapper = 0);

float   pCvPtr_floatConvert(Ptr_float* wrapper);