Delphi/unOcvWrapper_nativeClasses.pas

Function    pCvPtr_GeneralizedHoughBallardCreate(const wrapper: PCvGeneralizedHoughBallard_t): PCvPtr_GeneralizedHoughBallard; cdecl;
Procedure   pCvPtr_GeneralizedHoughBallardDelete(const cptr: PCvPtr_GeneralizedHoughBallard;  const wrapper: PCvGeneralizedHoughBallard_t); cdecl;
Function    pCvPtr_GeneralizedHoughGuilConvert(const wrapper: PCvPtr_GeneralizedHoughGuil): PCvGeneralizedHoughGuil_t; cdecl;
Function    pCvPtr_GeneralizedHoughGuilCreate(const wrapper: PCvGeneralizedHoughGuil_t): PCvPtr_GeneralizedHoughGuil; cdecl;
Procedure   pCvPtr_GeneralizedHoughGuilDelete(const cptr: PCvPtr_GeneralizedHoughGuil;  const wrapper: PCvGeneralizedHoughGuil_t); cdecl;
Function    pCvPtr_KAZEConvert(const wrapper: PCvPtr_KAZE): PCvKAZE_t; cdecl;
Function    pCvPtr_KAZECreate(const wrapper: PCvKAZE_t): PCvPtr_KAZE; cdecl;
Procedure   pCvPtr_KAZEDelete(const cptr: PCvPtr_KAZE;  const wrapper: PCvKAZE_t); cdecl;
Function    pCvPtr_KNearestConvert(const wrapper: PCvPtr_KNearest): PCvml_KNearest_t; cdecl;
Function    pCvPtr_KNearestCreate(const wrapper: PCvml_KNearest_t): PCvPtr_KNearest; cdecl;
Procedure   pCvPtr_KNearestDelete(const cptr: PCvPtr_KNearest;  const wrapper: PCvml_KNearest_t); cdecl;
Function    pCvPtr_LayerConvert(const wrapper: PCvPtr_Layer): PCvdnn_Layer_t; cdecl;
Function    pCvPtr_LayerCreate(const wrapper: PCvdnn_Layer_t): PCvPtr_Layer; cdecl;
Procedure   pCvPtr_LayerDelete(const cptr: PCvPtr_Layer;  const wrapper: PCvdnn_Layer_t); cdecl;
Function    pCvPtr_LineSegmentDetectorConvert(const wrapper: PCvPtr_LineSegmentDetector): PCvLineSegmentDetector_t; cdecl;
Function    pCvPtr_LineSegmentDetectorCreate(const wrapper: PCvLineSegmentDetector_t): PCvPtr_LineSegmentDetector; cdecl;
Procedure   pCvPtr_LineSegmentDetectorDelete(const cptr: PCvPtr_LineSegmentDetector;  const wrapper: PCvLineSegmentDetector_t); cdecl;
Function    pCvPtr_LogisticRegressionConvert(const wrapper: PCvPtr_LogisticRegression): PCvml_LogisticRegression_t; cdecl;
Function    pCvPtr_LogisticRegressionCreate(const wrapper: PCvml_LogisticRegression_t): PCvPtr_LogisticRegression; cdecl;
Procedure   pCvPtr_LogisticRegressionDelete(const cptr: PCvPtr_LogisticRegression;  const wrapper: PCvml_LogisticRegression_t); cdecl;
Function    pCvPtr_MSERConvert(const wrapper: PCvPtr_MSER): PCvMSER_t; cdecl;
Function    pCvPtr_MSERCreate(const wrapper: PCvMSER_t): PCvPtr_MSER; cdecl;
Procedure   pCvPtr_MSERDelete(const cptr: PCvPtr_MSER;  const wrapper: PCvMSER_t); cdecl;
Function    pCvPtr_MergeDebevecConvert(const wrapper: PCvPtr_MergeDebevec): PCvMergeDebevec_t; cdecl;
Function    pCvPtr_MergeDebevecCreate(const wrapper: PCvMergeDebevec_t): PCvPtr_MergeDebevec; cdecl;
Procedure   pCvPtr_MergeDebevecDelete(const cptr: PCvPtr_MergeDebevec;  const wrapper: PCvMergeDebevec_t); cdecl;
Function    pCvPtr_MergeMertensConvert(const wrapper: PCvPtr_MergeMertens): PCvMergeMertens_t; cdecl;
Function    pCvPtr_MergeMertensCreate(const wrapper: PCvMergeMertens_t): PCvPtr_MergeMertens; cdecl;
Procedure   pCvPtr_MergeMertensDelete(const cptr: PCvPtr_MergeMertens;  const wrapper: PCvMergeMertens_t); cdecl;
Function    pCvPtr_MergeRobertsonConvert(const wrapper: PCvPtr_MergeRobertson): PCvMergeRobertson_t; cdecl;
Function    pCvPtr_MergeRobertsonCreate(const wrapper: PCvMergeRobertson_t): PCvPtr_MergeRobertson; cdecl;
Procedure   pCvPtr_MergeRobertsonDelete(const cptr: PCvPtr_MergeRobertson;  const wrapper: PCvMergeRobertson_t); cdecl;
Function    pCvPtr_NormalBayesClassifierConvert(const wrapper: PCvPtr_NormalBayesClassifier): PCvml_NormalBayesClassifier_t; cdecl;
Function    pCvPtr_NormalBayesClassifierCreate(const wrapper: PCvml_NormalBayesClassifier_t): PCvPtr_NormalBayesClassifier; cdecl;
Procedure   pCvPtr_NormalBayesClassifierDelete(const cptr: PCvPtr_NormalBayesClassifier;  const wrapper: PCvml_NormalBayesClassifier_t); cdecl;
Function    pCvPtr_ORBConvert(const wrapper: PCvPtr_ORB): PCvORB_t; cdecl;
Function    pCvPtr_ORBCreate(const wrapper: PCvORB_t): PCvPtr_ORB; cdecl;
Procedure   pCvPtr_ORBDelete(const cptr: PCvPtr_ORB;  const wrapper: PCvORB_t); cdecl;
Function    pCvPtr_OriginalClassNameConvert(const wrapper: PCvPtr_OriginalClassName): PCvutils_nested_OriginalClassName_t; cdecl;
Function    pCvPtr_OriginalClassNameCreate(const wrapper: PCvutils_nested_OriginalClassName_t): PCvPtr_OriginalClassName; cdecl;
Procedure   pCvPtr_OriginalClassNameDelete(const cptr: PCvPtr_OriginalClassName;  const wrapper: PCvutils_nested_OriginalClassName_t); cdecl;
Function    pCvPtr_ParamGridConvert(const wrapper: PCvPtr_ParamGrid): PCvml_ParamGrid_t; cdecl;
Function    pCvPtr_ParamGridCreate(const wrapper: PCvml_ParamGrid_t): PCvPtr_ParamGrid; cdecl;
Procedure   pCvPtr_ParamGridDelete(const cptr: PCvPtr_ParamGrid;  const wrapper: PCvml_ParamGrid_t); cdecl;
Function    pCvPtr_QRCodeEncoderConvert(const wrapper: PCvPtr_QRCodeEncoder): PCvQRCodeEncoder_t; cdecl;
Function    pCvPtr_QRCodeEncoderCreate(const wrapper: PCvQRCodeEncoder_t): PCvPtr_QRCodeEncoder; cdecl;
Procedure   pCvPtr_QRCodeEncoderDelete(const cptr: PCvPtr_QRCodeEncoder;  const wrapper: PCvQRCodeEncoder_t); cdecl;
Function    pCvPtr_SIFTConvert(const wrapper: PCvPtr_SIFT): PCvSIFT_t; cdecl;
Function    pCvPtr_SIFTCreate(const wrapper: PCvSIFT_t): PCvPtr_SIFT; cdecl;
Procedure   pCvPtr_SIFTDelete(const cptr: PCvPtr_SIFT;  const wrapper: PCvSIFT_t); cdecl;
Function    pCvPtr_SVMConvert(const wrapper: PCvPtr_SVM): PCvml_SVM_t; cdecl;
Function    pCvPtr_SVMCreate(const wrapper: PCvml_SVM_t): PCvPtr_SVM; cdecl;
Procedure   pCvPtr_SVMDelete(const cptr: PCvPtr_SVM;  const wrapper: PCvml_SVM_t); cdecl;
Function    pCvPtr_SVMSGDConvert(const wrapper: PCvPtr_SVMSGD): PCvml_SVMSGD_t; cdecl;
Function    pCvPtr_SVMSGDCreate(const wrapper: PCvml_SVMSGD_t): PCvPtr_SVMSGD; cdecl;
Procedure   pCvPtr_SVMSGDDelete(const cptr: PCvPtr_SVMSGD;  const wrapper: PCvml_SVMSGD_t); cdecl;
Function    pCvPtr_SeamFinderConvert(const wrapper: PCvPtr_SeamFinder): PCvdetail_SeamFinder_t; cdecl;
Function    pCvPtr_SeamFinderCreate(const wrapper: PCvdetail_SeamFinder_t): PCvPtr_SeamFinder; cdecl;
Procedure   pCvPtr_SeamFinderDelete(const cptr: PCvPtr_SeamFinder;  const wrapper: PCvdetail_SeamFinder_t); cdecl;
Function    pCvPtr_SimpleBlobDetectorConvert(const wrapper: PCvPtr_SimpleBlobDetector): PCvSimpleBlobDetector_t; cdecl;
Function    pCvPtr_SimpleBlobDetectorCreate(const wrapper: PCvSimpleBlobDetector_t): PCvPtr_SimpleBlobDetector; cdecl;
Procedure   pCvPtr_SimpleBlobDetectorDelete(const cptr: PCvPtr_SimpleBlobDetector;  const wrapper: PCvSimpleBlobDetector_t); cdecl;
Function    pCvPtr_SparsePyrLKOpticalFlowConvert(const wrapper: PCvPtr_SparsePyrLKOpticalFlow): PCvSparsePyrLKOpticalFlow_t; cdecl;
Function    pCvPtr_SparsePyrLKOpticalFlowCreate(const wrapper: PCvSparsePyrLKOpticalFlow_t): PCvPtr_SparsePyrLKOpticalFlow; cdecl;
Procedure   pCvPtr_SparsePyrLKOpticalFlowDelete(const cptr: PCvPtr_SparsePyrLKOpticalFlow;  const wrapper: PCvSparsePyrLKOpticalFlow_t); cdecl;
Function    pCvPtr_StereoBMConvert(const wrapper: PCvPtr_StereoBM): PCvStereoBM_t; cdecl;
Function    pCvPtr_StereoBMCreate(const wrapper: PCvStereoBM_t): PCvPtr_StereoBM; cdecl;
Procedure   pCvPtr_StereoBMDelete(const cptr: PCvPtr_StereoBM;  const wrapper: PCvStereoBM_t); cdecl;
Function    pCvPtr_StereoSGBMConvert(const wrapper: PCvPtr_StereoSGBM): PCvStereoSGBM_t; cdecl;
Function    pCvPtr_StereoSGBMCreate(const wrapper: PCvStereoSGBM_t): PCvPtr_StereoSGBM; cdecl;
Procedure   pCvPtr_StereoSGBMDelete(const cptr: PCvPtr_StereoSGBM;  const wrapper: PCvStereoSGBM_t); cdecl;
Function    pCvPtr_StitcherConvert(const wrapper: PCvPtr_Stitcher): PCvStitcher_t; cdecl;
Function    pCvPtr_StitcherCreate(const wrapper: PCvStitcher_t): PCvPtr_Stitcher; cdecl;
Procedure   pCvPtr_StitcherDelete(const cptr: PCvPtr_Stitcher;  const wrapper: PCvStitcher_t); cdecl;
Function    pCvPtr_TimelapserConvert(const wrapper: PCvPtr_Timelapser): PCvdetail_Timelapser_t; cdecl;
Function    pCvPtr_TimelapserCreate(const wrapper: PCvdetail_Timelapser_t): PCvPtr_Timelapser; cdecl;
Procedure   pCvPtr_TimelapserDelete(const cptr: PCvPtr_Timelapser;  const wrapper: PCvdetail_Timelapser_t); cdecl;
Function    pCvPtr_TonemapConvert(const wrapper: PCvPtr_Tonemap): PCvTonemap_t; cdecl;
Function    pCvPtr_TonemapCreate(const wrapper: PCvTonemap_t): PCvPtr_Tonemap; cdecl;
Procedure   pCvPtr_TonemapDelete(const cptr: PCvPtr_Tonemap;  const wrapper: PCvTonemap_t); cdecl;
Function    pCvPtr_TonemapDragoConvert(const wrapper: PCvPtr_TonemapDrago): PCvTonemapDrago_t; cdecl;
Function    pCvPtr_TonemapDragoCreate(const wrapper: PCvTonemapDrago_t): PCvPtr_TonemapDrago; cdecl;
Procedure   pCvPtr_TonemapDragoDelete(const cptr: PCvPtr_TonemapDrago;  const wrapper: PCvTonemapDrago_t); cdecl;
Function    pCvPtr_TonemapMantiukConvert(const wrapper: PCvPtr_TonemapMantiuk): PCvTonemapMantiuk_t; cdecl;
Function    pCvPtr_TonemapMantiukCreate(const wrapper: PCvTonemapMantiuk_t): PCvPtr_TonemapMantiuk; cdecl;
Procedure   pCvPtr_TonemapMantiukDelete(const cptr: PCvPtr_TonemapMantiuk;  const wrapper: PCvTonemapMantiuk_t); cdecl;
Function    pCvPtr_TonemapReinhardConvert(const wrapper: PCvPtr_TonemapReinhard): PCvTonemapReinhard_t; cdecl;
Function    pCvPtr_TonemapReinhardCreate(const wrapper: PCvTonemapReinhard_t): PCvPtr_TonemapReinhard; cdecl;
Procedure   pCvPtr_TonemapReinhardDelete(const cptr: PCvPtr_TonemapReinhard;  const wrapper: PCvTonemapReinhard_t); cdecl;
Function    pCvPtr_TrackerDaSiamRPNConvert(const wrapper: PCvPtr_TrackerDaSiamRPN): PCvTrackerDaSiamRPN_t; cdecl;
Function    pCvPtr_TrackerDaSiamRPNCreate(const wrapper: PCvTrackerDaSiamRPN_t): PCvPtr_TrackerDaSiamRPN; cdecl;
Procedure   pCvPtr_TrackerDaSiamRPNDelete(const cptr: PCvPtr_TrackerDaSiamRPN;  const wrapper: PCvTrackerDaSiamRPN_t); cdecl;
Function    pCvPtr_TrackerGOTURNConvert(const wrapper: PCvPtr_TrackerGOTURN): PCvTrackerGOTURN_t; cdecl;
Function    pCvPtr_TrackerGOTURNCreate(const wrapper: PCvTrackerGOTURN_t): PCvPtr_TrackerGOTURN; cdecl;
Procedure   pCvPtr_TrackerGOTURNDelete(const cptr: PCvPtr_TrackerGOTURN;  const wrapper: PCvTrackerGOTURN_t); cdecl;
Function    pCvPtr_TrackerMILConvert(const wrapper: PCvPtr_TrackerMIL): PCvTrackerMIL_t; cdecl;
Function    pCvPtr_TrackerMILCreate(const wrapper: PCvTrackerMIL_t): PCvPtr_TrackerMIL; cdecl;
Procedure   pCvPtr_TrackerMILDelete(const cptr: PCvPtr_TrackerMIL;  const wrapper: PCvTrackerMIL_t); cdecl;
Function    pCvPtr_TrainDataConvert(const wrapper: PCvPtr_TrainData): PCvml_TrainData_t; cdecl;
Function    pCvPtr_TrainDataCreate(const wrapper: PCvml_TrainData_t): PCvPtr_TrainData; cdecl;
Procedure   pCvPtr_TrainDataDelete(const cptr: PCvPtr_TrainData;  const wrapper: PCvml_TrainData_t); cdecl;
Function    pCvPtr_VariationalRefinementConvert(const wrapper: PCvPtr_VariationalRefinement): PCvVariationalRefinement_t; cdecl;
Function    pCvPtr_VariationalRefinementCreate(const wrapper: PCvVariationalRefinement_t): PCvPtr_VariationalRefinement; cdecl;
Procedure   pCvPtr_VariationalRefinementDelete(const cptr: PCvPtr_VariationalRefinement;  const wrapper: PCvVariationalRefinement_t); cdecl;
Function    pCvPtr_flann_IndexParamsConvert(const wrapper: PCvPtr_flann_IndexParams): PCvIndexParams_t; cdecl;
Function    pCvPtr_flann_IndexParamsCreate(const wrapper: PCvIndexParams_t): PCvPtr_flann_IndexParams; cdecl;
Procedure   pCvPtr_flann_IndexParamsDelete(const cptr: PCvPtr_flann_IndexParams;  const wrapper: PCvIndexParams_t); cdecl;
Function    pCvPtr_flann_SearchParamsConvert(const wrapper: PCvPtr_flann_SearchParams): PCvSearchParams_t; cdecl;
Function    pCvPtr_flann_SearchParamsCreate(const wrapper: PCvSearchParams_t): PCvPtr_flann_SearchParams; cdecl;
Procedure   pCvPtr_flann_SearchParamsDelete(const cptr: PCvPtr_flann_SearchParams;  const wrapper: PCvSearchParams_t); cdecl;
Function    pCvPtr_floatConvert(const wrapper: PCvPtr_float): Single; cdecl;
